Wither config options now scale based off max difficulty instead of current difficulty